# fun_trading

./: .gitignore  LICENSE  README.md  config.example.json  config.rsi-example.json  pyproject.toml
docs/: agile-operating-model.md  architecture.md  how-to-run.md  strategy-manual.md
docs/agents/: README.md  developer.md  product-manager.md  prompt-pack.md  qa-validation.md  quant-researcher.md  release-operations.md  scrum-master.md  tech-lead.md
docs/backlog/: product-backlog.md
docs/features/: SIG-001-feature-brief.md
docs/process/: handoffs.md  sprint-workflow.md
docs/sprints/: sprint-01.md
docs/templates/: feature-brief.md
tests/: test_analytics.py  test_backtest.py  test_breakout_strategy.py  test_cache.py  test_core_types.py  test_data_layer.py  test_engine.py  test_event_bus.py  test_execution.py  test_goslin_strategy.py  test_history.py  test_interactive.py  test_macd_strategy.py  test_market_profile_strategy.py  test_metrics.py  test_paper.py  test_plugin.py  test_prettylog.py  test_risk.py  test_rsi_strategy.py  test_service.py  test_signals.py  test_strategy.py  test_structlog.py
trading_framework/: __init__.py  backtest.py  cache.py  cli.py  config.py  data.py  engine.py  history.py  interactive.py  metrics.py  models.py  notifiers.py  paper.py  prettylog.py  risk.py  strategy.py  structlog.py  tui.py
trading_framework/analytics/: __init__.py  costs.py  regime.py
trading_framework/core/: __init__.py  events.py  interfaces.py  types.py
trading_framework/data/: __init__.py  manager.py  resampler.py
trading_framework/execution/: __init__.py  (+3 more)
(+41 files in other folders)
