[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-framework"
version = "0.1.0"
description = "Interval-based market monitoring and trading signal framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
trading-framework = "trading_framework.cli:main"

[tool.setuptools.packages.find]
include = ["trading_framework*"]
