[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-framework"
version = "0.2.0"
description = "Interval-based market monitoring and trading signal framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.50"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1", "plotly>=5.18"]
all = ["textual>=0.50", "fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1", "plotly>=5.18"]
dev = ["pytest>=7.4"]

[project.scripts]
trading-framework = "trading_framework.cli:main"

[tool.setuptools.packages.find]
include = ["trading_framework*"]
